--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,5 +9,17 @@
 </head>
 <body>
     <h1>Dijkstra WC3 Live Solve</h1>
+    <div id="createTask">
+        <input type="text" id="taskIn" placeholder="task">
+        <button id="addTaskButton">Add Task</button>
+    </div>
+    <div id="taskListDiv">
+        <h3>Tasks:</h3>
+        <ul>
+            <li>TEST TASK</li>
+            <li>TEST TASK</li>
+            <li>TEST TASK</li>
+        </ul>
+    </div>
 </body>
 </html>
