--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dijkstra WC3 Live Solve</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="vendors/jquery-3.4.1.min.js"></script>
     <script src="scripts/client.js"></script>
 </head>
 <body>
