--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,10 +16,7 @@
     </div>
     <div id="taskListDiv">
         <h3>Tasks:</h3>
-        <ul>
-            <li>TEST TASK</li>
-            <li>TEST TASK</li>
-            <li>TEST TASK</li>
+        <ul id="tasksOut">
         </ul>
     </div>
 </body>
